Some html tags chnanged to fieldset

--- a/app/views/events/_custom_events.html.erb
+++ b/app/views/events/_custom_events.html.erb
@@ -1,4 +1,4 @@
-<div id="custom-event">
+<fieldset id="custom-event">
   <h3>
     <p>custom</p>
   </h3>
@@ -26,4 +26,4 @@
       </div>
     </div>
   </div>
-</div>
+</fieldset>
