--- a/app/views/events/_training.html.erb
+++ b/app/views/events/_training.html.erb
@@ -1,4 +1,4 @@
-<div id="training">
+<fieldset id="training">
   <h3>
     <p>training</p>
   </h3>
@@ -18,4 +18,4 @@
       <div role="tabpanel" class="tab-pane" id="training-note-tab">place for traning note</div>
     </div>
   </div>
-</div>
+</fieldset>
