--- a/app/views/events/_transfer.html.erb
+++ b/app/views/events/_transfer.html.erb
@@ -1,4 +1,4 @@
-<div id="transfer">
+<fieldset id="transfer">
   <h3>
     <p>transfer</p>
   </h3>
@@ -14,4 +14,4 @@
       <div role="tabpanel" class="tab-pane" id="transfer-note-tab">transfer-note-tab</div>
     </div>
   </div>
-</div>
+</fieldset>
