--- a/app/views/events/_visit.html.erb
+++ b/app/views/events/_visit.html.erb
@@ -1,4 +1,4 @@
-<div id="visit">
+<fieldset id="visit">
   <h3>
     <p>visit</p>
   </h3>
@@ -14,4 +14,4 @@
       <div role="tabpanel" class="tab-pane" id="visit-note-tab">visit-note-tab</div>
     </div>
   </div>
-</div>
+</fieldset>
