--- a/app/views/events/_custom_events.html.erb
+++ b/app/views/events/_custom_events.html.erb
@@ -19,13 +19,84 @@
           <%= custom_event.text_area :description %> 
         </div>
         <div role="tabpanel" class="tab-pane" id="custom-event-dog-tab">
-          <p> Place for custom-event-dog-tabs</p>
+          <h3>Listing Dogs</h3>
+          <table class="table table-striped table-responsive table-hover">
+            <thead>
+              <tr>
+                <th>Name:</th>
+                <th>Chip id:</th>
+                <th>Age:</th>
+                <th>Breed:</th>
+                <th>Sex:</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @dogs.each do |dog| %>
+                <tr>
+                  <td> <%= dog.name %> </td>
+                  <td> <%= dog.chip_id %> </td>
+                  <td> <%= dog.age %> </td>
+                  <td> <%= dog.breed %> </td>
+                  <td> <%= dog.sex %> </td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
         </div>
         <div role="tabpanel" class="tab-pane" id="custom-event-clients-tab">
-          <p> Place for custom-event-clients-tab</p>
+          <h3>Dog Owners</h3>
+          <table class="table table-striped table-responsive table-hover">
+            <thead>
+              <tr>
+                <th>First name</th>
+                <th>Last name</th>
+                <th>Email</th>
+                <th>Phone1</th>
+                <th>Phone2</th>
+                <th>Institution</th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <% @clients.each do |client| %>
+                <tr>
+                  <td><%= client.first_name %></td>
+                  <td><%= client.last_name %></td>
+                  <td><%= client.email %></td>
+                  <td><%= client.phone1 %></td>
+                  <td><%= client.phone2 %></td>
+                  <td><%= client.institution %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
         </div>
         <div role="tabpanel" class="tab-pane" id="custom-event-voluteer-tab">
-          <p> Place for custom-event-voluteer-tab</p>
+          <h3>Listing Volunteers</h3>
+          <table class="table table-striped table-responsive table-hover">
+            <thead>
+              <tr>
+                <th>First name</th>
+                <th>Last name</th>
+                <th>Email</th>
+                <th>Phone1</th>
+                <th>Phone2</th>
+                <th>Address</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @volunteers.each do |volunteer| %>
+                <tr>
+                  <td><%= volunteer.first_name %></td>
+                  <td><%= volunteer.last_name %></td>
+                  <td><%= volunteer.email %></td>
+                  <td><%= volunteer.phone1 %></td>
+                  <td><%= volunteer.phone2 %></td>
+                  <td><%= volunteer.location.full_street_address %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
         </div>
       </div>
     <% end %> 
