--- a/app/views/events/_custom_events.html.erb
+++ b/app/views/events/_custom_events.html.erb
@@ -23,6 +23,7 @@
           <table class="table table-striped table-responsive table-hover">
             <thead>
               <tr>
+                <th>Add:</th>
                 <th>Name:</th>
                 <th>Chip id:</th>
                 <th>Age:</th>
@@ -33,6 +34,7 @@
             <tbody>
               <% @dogs.each do |dog| %>
                 <tr>
+                  <td> <%= check_box_tag "dogs_ids[]", dog.id %> </td>
                   <td> <%= dog.name %> </td>
                   <td> <%= dog.chip_id %> </td>
                   <td> <%= dog.age %> </td>
@@ -48,6 +50,7 @@
           <table class="table table-striped table-responsive table-hover">
             <thead>
               <tr>
+                <th>Add:</th>
                 <th>First name</th>
                 <th>Last name</th>
                 <th>Email</th>
@@ -60,6 +63,7 @@
             <tbody>
               <% @clients.each do |client| %>
                 <tr>
+                  <td> <%= check_box_tag "clients_ids[]", client.id %> </td>
                   <td><%= client.first_name %></td>
                   <td><%= client.last_name %></td>
                   <td><%= client.email %></td>
@@ -76,6 +80,7 @@
           <table class="table table-striped table-responsive table-hover">
             <thead>
               <tr>
+                <th>Add</th>
                 <th>First name</th>
                 <th>Last name</th>
                 <th>Email</th>
@@ -87,6 +92,7 @@
             <tbody>
               <% @volunteers.each do |volunteer| %>
                 <tr>
+                  <td> <%= check_box_tag "voluteers_ids[]", volunteer.id %> </td>
                   <td><%= volunteer.first_name %></td>
                   <td><%= volunteer.last_name %></td>
                   <td><%= volunteer.email %></td>
