--- a/app/views/events/_custom_events.html.erb
+++ b/app/views/events/_custom_events.html.erb
@@ -9,102 +9,110 @@
       <li role="presentation"><a href="#custom-event-dog-tab" aria-controls="custom-event-dog-tab" role="tab" data-toggle="tab">Dogs</a></li>
       <li role="presentation"><a href="#custom-event-clients-tab" aria-controls="custom-event-clients-tab" role="tab" data-toggle="tab">Clients</a></li>
       <li role="presentation"><a href="#custom-event-voluteer-tab" aria-controls="custom-event-voluteer-tab" role="tab" data-toggle="tab">Volunteers</a></li>
+      <li role="presentation"><a href="#custom-event-note-tab" aria-controls="training-note-tab" role="tab" data-toggle="tab">Note</a></li>
     </ul>
-    <%= event.fields_for :custom_events do |custom_event| %>
-      <!-- Tab panes -->
-      <div class="tab-content">
-        <div role="tabpanel" class="tab-pane active" id="custom-event-description-tab">
-          <h3> Describe event </h3>
+    <!-- Tab panes -->
+    <div class="tab-content">
+      <div role="tabpanel" class="tab-pane active" id="custom-event-description-tab">
+        <h3> Describe event </h3>
+        <%= event.fields_for :custom_events do |custom_event| %>
           <%= custom_event.label :description %><br /> 
           <%= custom_event.text_area :description %> 
-        </div>
-        <div role="tabpanel" class="tab-pane" id="custom-event-dog-tab">
-          <h3>Listing Dogs</h3>
-          <table class="table table-striped table-responsive table-hover">
-            <thead>
-              <tr>
-                <th>Add:</th>
-                <th>Name:</th>
-                <th>Chip id:</th>
-                <th>Age:</th>
-                <th>Breed:</th>
-                <th>Sex:</th>
-              </tr>
-            </thead>
-            <tbody>
-              <% @dogs.each do |dog| %>
-                <tr>
-                  <td> <%= check_box_tag "dogs_ids[]", dog.id %> </td>
-                  <td> <%= dog.name %> </td>
-                  <td> <%= dog.chip_id %> </td>
-                  <td> <%= dog.age %> </td>
-                  <td> <%= dog.breed %> </td>
-                  <td> <%= dog.sex %> </td>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
-        </div>
-        <div role="tabpanel" class="tab-pane" id="custom-event-clients-tab">
-          <h3>Dog Owners</h3>
-          <table class="table table-striped table-responsive table-hover">
-            <thead>
-              <tr>
-                <th>Add:</th>
-                <th>First name</th>
-                <th>Last name</th>
-                <th>Email</th>
-                <th>Phone1</th>
-                <th>Phone2</th>
-                <th>Institution</th>
-              </tr>
-            </thead>
-
-            <tbody>
-              <% @clients.each do |client| %>
-                <tr>
-                  <td> <%= check_box_tag "clients_ids[]", client.id %> </td>
-                  <td><%= client.first_name %></td>
-                  <td><%= client.last_name %></td>
-                  <td><%= client.email %></td>
-                  <td><%= client.phone1 %></td>
-                  <td><%= client.phone2 %></td>
-                  <td><%= client.institution %></td>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
-        </div>
-        <div role="tabpanel" class="tab-pane" id="custom-event-voluteer-tab">
-          <h3>Listing Volunteers</h3>
-          <table class="table table-striped table-responsive table-hover">
-            <thead>
-              <tr>
-                <th>Add</th>
-                <th>First name</th>
-                <th>Last name</th>
-                <th>Email</th>
-                <th>Phone1</th>
-                <th>Phone2</th>
-                <th>Address</th>
-              </tr>
-            </thead>
-            <tbody>
-              <% @volunteers.each do |volunteer| %>
-                <tr>
-                  <td> <%= check_box_tag "voluteers_ids[]", volunteer.id %> </td>
-                  <td><%= volunteer.first_name %></td>
-                  <td><%= volunteer.last_name %></td>
-                  <td><%= volunteer.email %></td>
-                  <td><%= volunteer.phone1 %></td>
-                  <td><%= volunteer.phone2 %></td>
-                  <td><%= volunteer.location.full_street_address %></td>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
-        </div>
+        <% end %> 
       </div>
-    <% end %> 
+      <div role="tabpanel" class="tab-pane" id="custom-event-dog-tab">
+        <h3>Add Dogs</h3>
+        <table class="table table-striped table-responsive table-hover">
+          <thead>
+            <tr>
+              <th>Add:</th>
+              <th>Name:</th>
+              <th>Chip id:</th>
+              <th>Age:</th>
+              <th>Breed:</th>
+              <th>Sex:</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @dogs.each do |dog| %>
+              <tr>
+                <td> <%= check_box_tag "dogs_ids[]", dog.id %> </td>
+                <td> <%= dog.name %> </td>
+                <td> <%= dog.chip_id %> </td>
+                <td> <%= dog.age %> </td>
+                <td> <%= dog.breed %> </td>
+                <td> <%= dog.sex %> </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+      <div role="tabpanel" class="tab-pane" id="custom-event-clients-tab">
+        <h3>Add Clients</h3>
+        <table class="table table-striped table-responsive table-hover">
+          <thead>
+            <tr>
+              <th>Add:</th>
+              <th>First name</th>
+              <th>Last name</th>
+              <th>Email</th>
+              <th>Phone1</th>
+              <th>Phone2</th>
+              <th>Institution</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <% @clients.each do |client| %>
+              <tr>
+                <td> <%= check_box_tag "clients_ids[]", client.id %> </td>
+                <td><%= client.first_name %></td>
+                <td><%= client.last_name %></td>
+                <td><%= client.email %></td>
+                <td><%= client.phone1 %></td>
+                <td><%= client.phone2 %></td>
+                <td><%= client.institution %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+      <div role="tabpanel" class="tab-pane" id="custom-event-voluteer-tab">
+        <h3>Add Volunteers</h3>
+        <table class="table table-striped table-responsive table-hover">
+          <thead>
+            <tr>
+              <th>Add</th>
+              <th>First name</th>
+              <th>Last name</th>
+              <th>Email</th>
+              <th>Phone1</th>
+              <th>Phone2</th>
+              <th>Address</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @volunteers.each do |volunteer| %>
+              <tr>
+                <td> <%= check_box_tag "voluteers_ids[]", volunteer.id %> </td>
+                <td><%= volunteer.first_name %></td>
+                <td><%= volunteer.last_name %></td>
+                <td><%= volunteer.email %></td>
+                <td><%= volunteer.phone1 %></td>
+                <td><%= volunteer.phone2 %></td>
+                <td><%= volunteer.location.full_street_address %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+      <div role="tabpanel" class="tab-pane" id="custom-event-note-tab">
+        <h3> Add Note </h3>
+        <%= event.fields_for :notes do |note| %> 
+          <%= note.label :content %> <br />
+          <%= note.text_area :content %> 
+        <% end %> 
+      </div>
+    </div>
   </div>
 </fieldset>
