--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,12 +1,15 @@
-<%= form_for @event, remote: true, html: {class: 'form-horizontal'} do |f| %>
+<%= simple_form_for @event, remote: true, html: {class: 'form-horizontal'} do |f| %>
   <%# create errors code %> 
 
-  <%= f.label :title %> 
-  <%= f.text_field :title, class: 'form-control' %> <br /> 
-  <%= f.label :start %> 
-  <%= f.text_field :start, class: "datepicker form-control", id: "startTime" %> <br />
-  <%= f.label :end %> 
-  <%= f.text_field :end, class: "datepicker form-control", id: "endTime" %> <br /> 
+  <%# <%= f.label :title %1> %> 
+  <%# <%= f.text_field :title, class: 'form-control' %1> <br /> %> 
+  <%= f.input :title, input_html: {class: "form-control" } %> 
+  <%= f.input :start, as: :string, input_html: {class: "datepicker form-control", id: "startTime"} %> 
+  <%# <%= f.label :start %1> %> 
+  <%# <%= f.text_field :start, class: "datepicker form-control", id: "startTime" %1> <br /> %>
+  <%= f.input :end, as: :string, input_html: {class: "datepicker form-control", id: "endTime"} %> 
+  <%# <%= f.label :end %1> %> 
+  <%# <%= f.text_field :end, class: "datepicker form-control", id: "endTime" %1> <br /> %> 
 
 
   <%= select_tag :options,
@@ -18,7 +21,8 @@
     <%= render "transfer" %>
     <%= render "visit" %>
 
-    <%= f.submit "Create", class: 'btn btn-default' %> <br /> 
+    <%# <%= f.submit "Create", class: 'btn btn-default' %1> <br /> %> 
+    <%= f.button :submit %> 
 
     <%= link_to 'Delete', event_path, method: :delete, 
       class: 'btn btn-danger', 
