--- a/app/views/events/_custom_events.html.erb
+++ b/app/views/events/_custom_events.html.erb
@@ -13,40 +13,40 @@
     </ul>
     <!-- Tab panes -->
     <div class="tab-content">
-      <div role="tabpanel" class="tab-pane active" id="custom-event-description-tab">
-        <h3> Describe event </h3>
-        <%= event.fields_for :custom_events do |custom_event| %>
+      <%= event.simple_fields_for :custom_event do |custom_event| %>
+        <div role="tabpanel" class="tab-pane active" id="custom-event-description-tab">
+          <h3> Describe event </h3>
           <%= custom_event.label :description %><br /> 
           <%= custom_event.text_area :description %> 
-        <% end %> 
-      </div>
-      <div role="tabpanel" class="tab-pane" id="custom-event-dog-tab">
-        <h3>Add Dogs</h3>
-        <table class="table table-striped table-responsive table-hover">
-          <thead>
-            <tr>
-              <th>Add:</th>
-              <th>Name:</th>
-              <th>Chip id:</th>
-              <th>Age:</th>
-              <th>Breed:</th>
-              <th>Sex:</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @dogs.each do |dog| %>
+        </div>
+        <div role="tabpanel" class="tab-pane" id="custom-event-dog-tab">
+          <h3>Add Dogs</h3>
+          <table class="table table-striped table-responsive table-hover">
+            <thead>
               <tr>
-                <td> <%= check_box_tag "dogs_ids[]", dog.id %> </td>
-                <td> <%= dog.name %> </td>
-                <td> <%= dog.chip_id %> </td>
-                <td> <%= dog.age %> </td>
-                <td> <%= dog.breed %> </td>
-                <td> <%= dog.sex %> </td>
+                <th>Add:</th>
+                <th>Name:</th>
+                <th>Chip id:</th>
+                <th>Age:</th>
+                <th>Breed:</th>
+                <th>Sex:</th>
               </tr>
-            <% end %>
-          </tbody>
-        </table>
-      </div>
+            </thead>
+            <tbody>
+              <% @dogs.each do |dog| %>
+                <tr>
+                  <td> <%= check_box_tag "dogs_ids[]", dog.id %> </td>
+                  <td> <%= dog.name %> </td>
+                  <td> <%= dog.chip_id %> </td>
+                  <td> <%= dog.age %> </td>
+                  <td> <%= dog.breed %> </td>
+                  <td> <%= dog.sex %> </td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      <% end %> 
       <div role="tabpanel" class="tab-pane" id="custom-event-clients-tab">
         <h3>Add Clients</h3>
         <table class="table table-striped table-responsive table-hover">
