--- a/app/views/events/_custom_events.html.erb
+++ b/app/views/events/_custom_events.html.erb
@@ -21,6 +21,7 @@
         </div>
         <div role="tabpanel" class="tab-pane" id="custom-event-dog-tab">
           <h3>Add Dogs</h3>
+          <%# <%= custom_event.association :dogs, as: :check_boxes, collection: Dog.all.to_a, label_method: :name %1> %> 
           <table class="table table-striped table-responsive table-hover">
             <thead>
               <tr>
@@ -35,7 +36,7 @@
             <tbody>
               <% @dogs.each do |dog| %>
                 <tr>
-                  <td> <%= check_box_tag "dogs_ids[]", dog.id %> </td>
+                  <td> <%= check_box_tag "dog_ids[]", dog.id, @event.custom_event.dog_ids.include?(dog.id) %> </td>
                   <td> <%= dog.name %> </td>
                   <td> <%= dog.chip_id %> </td>
                   <td> <%= dog.age %> </td>
