--- a/app/views/events/_edit.html.erb
+++ b/app/views/events/_edit.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade" id="newEvent">
+<div class="modal fade" id="editEvent">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-body">
@@ -7,7 +7,7 @@
             <div class="containter">
               <div class="row">
                 <div class="col-sm-12">
-                  <button type="button" class="closeNewEvent close">x</button>
+                  <button type="button" class="closeEditEvent close">x</button>
                 </div>
               </div>
               <br />
@@ -16,12 +16,35 @@
                   <p id="notice"><%= notice %></p>
                   <div id="event_date_range"></div>
                   <div id="date_picker"></div>
-                  <%= render 'form' %> 
+                  <%= simple_form_for @event, remote: true, html: {class: 'form-horizontal'} do |f| %>
+
+                    <%= f.input :title, input_html: {class: "form-control" } %> 
+                    <%= f.input :start, as: :string, input_html: {class: "datepicker form-control", id: "startTime"} %> 
+                    <%= f.input :end, as: :string, input_html: {class: "datepicker form-control", id: "endTime"} %> 
+
+                    <%= hidden_field_tag :options, params[:options] %> 
+                    <% case params[:options] 
+                         when 1 %> <%= render "custom_events", event: f %> 
+                      <% when 2 %> <%= render "training" %> 
+                      <% when 3 %> <%= render "transfer" %> 
+                      <% when 4 %> <%= render "visit" %> 
+                    <% end %> 
+                    <br />
+                    <br />
+
+                    <%= f.button :submit %> 
+
+                    <%= link_to 'Delete', event_path, method: :delete, 
+                      class: 'btn btn-danger', 
+                      data: {confirm: 'Are you sure?'}, 
+                      remote: true unless @event.new_record? %> 
+
+                  <% end %> 
                 </div>
               </div>
               <div class="row">
                 <div class="col-sm-12">
-                  <button type="button" class="closeNewEvent btn btn-default">close</button>
+                  <button type="button" class="closeEditEvent btn btn-default">close</button>
                 </div>
               </div>
             </div>
