--- a/app/views/events/_edit_form.html.erb
+++ b/app/views/events/_edit_form.html.erb
@@ -25,9 +25,9 @@
                     <%= hidden_field_tag :options, params[:options] %> 
                     <% case params[:options] 
                          when 1 %> <%= render "custom_events", event: f %> 
-                      <% when 2 %> <%= render "training" %> 
-                      <% when 3 %> <%= render "transfer" %> 
-                      <% when 4 %> <%= render "visit" %> 
+                      <% when 2 %> <%= render "training", event: f %> 
+                      <% when 3 %> <%= render "transfer", event: f %> 
+                      <% when 4 %> <%= render "visit", event: f %> 
                     <% end %> 
                     <br />
                     <br />
