--- a/app/views/events/_visit.html.erb
+++ b/app/views/events/_visit.html.erb
@@ -13,13 +13,70 @@
     <div class="tab-content">
       <%= event.simple_fields_for :visit do |visit|  %>
         <div role="tabpanel" class="tab-pane active" id="visit-volunteer-tab">
-          visit-details-tab
+          <h3>Listing Volunteers</h3>
+
+          <table class="table table-striped table-responsive table-hover">
+            <thead>
+              <tr>
+                <th>Add</th>
+                <th>Full name</th>
+                <th>Email</th>
+                <th>Phone1</th>
+                <th>Phone2</th>
+                <th>Address</th>
+              </tr>
+            </thead>
+            <tbody>
+              <%= hidden_field_tag "visitor_id", nil %> 
+              <% @volunteers.each do |volunteer| %>
+                <tr>
+                  <td> <%= radio_button_tag "visitor_id", volunteer.id, @event.visit.volunteer_id == volunteer.id %> </td>
+                  <td><%= volunteer.fullname %></td>
+                  <td><%= volunteer.email %></td>
+                  <td><%= volunteer.phone1 %></td>
+                  <td><%= volunteer.phone2 %></td>
+                  <td><%= volunteer.location.full_street_address %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+
         </div>
         <div role="tabpanel" class="tab-pane" id="visit-client-tab">
-          visit-client-tab
+          <h3>Listing Clinets</h3>
+          
+          <table class="table table-striped table-responsive table-hover">
+            <thead>
+              <tr>
+                <th>Add</th>
+                <th>Full name</th>
+                <th>Email</th>
+                <th>Phone1</th>
+                <th>Phone2</th>
+                <th>Institution</th>
+              </tr>
+            </thead>
+            <tbody>
+              <%= hidden_field_tag "visited_id", nil %> 
+              <% @clients.each do |client| %>
+                <tr>
+                  <td> <%= radio_button_tag "visited_id", client.id, @event.visit.client_id == client.id %> </td>
+                  <td><%= client.fullname %></td>
+                  <td><%= client.email %></td>
+                  <td><%= client.phone1 %></td>
+                  <td><%= client.phone2 %></td>
+                  <td><%= client.institution %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        
         </div>
         <div role="tabpanel" class="tab-pane" id="visit-note-tab">
-          visit-note-tab
+          <h3> Add Note </h3>
+
+          <%= render "note", event: event  %>
+        
         </div>
       <% end %> 
     </div>
