--- a/app/views/events/_note.html.erb
+++ b/app/views/events/_note.html.erb
@@ -1,3 +1,3 @@
-<%= event.simple_fields_for :note do |note| %> 
+<%= f.simple_fields_for :note do |note| %> 
   <%= note.input :content %> 
 <% end %> 
