Training parat of event form implemented except handling other attribute.Next method on update action for training.other

--- a/app/assets/stylesheets/events.sass
+++ b/app/assets/stylesheets/events.sass
@@ -1,2 +1,5 @@
-#custom-event, #training, #transfer, #visit
+#custom-event, #training, #transfer, #visit, .event_training_other
   display: none
+
+#training-other
+  margin-left: -15px
