Transfer partial customized. Next implement form

--- a/app/views/events/_transfer.html.erb
+++ b/app/views/events/_transfer.html.erb
@@ -1,16 +1,20 @@
 <fieldset id="transfer">
-  <h3>
-    <p>transfer</p>
-  </h3>
+  <h3> Transfer </h3>
   <div>
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist">
-      <li role="presentation" class="active"><a href="#transfer-details-tab" aria-controls="transfer-details-tab" role="tab" data-toggle="tab">Transfer Details</a></li>
+      <li role="presentation" class="active"><a href="#transfer-dog-tab" aria-controls="transfer-dog-tab" role="tab" data-toggle="tab">Dog</a></li>
+      <li role="presentation"><a href="#transfer-sender-tab" aria-controls="transfer-sender-tab" role="tab" data-toggle="tab">Sender</a></li>
+      <li role="presentation"><a href="#transfer-recipent-tab" aria-controls="transfer-recipient-tab" role="tab" data-toggle="tab">Recipient</a></li>
+      <li role="presentation"><a href="#transfer-volunteer-tab" aria-controls="transfer-volunteer-tab" role="tab" data-toggle="tab">Volunteer</a></li>
       <li role="presentation"><a href="#transfer-note-tab" aria-controls="transfer-note-tab" role="tab" data-toggle="tab">Notes</a></li>
     </ul>
     <!-- Tab panes -->
     <div class="tab-content">
-      <div role="tabpanel" class="tab-pane active" id="transfer-details-tab">transfer-details-tab</div>
+      <div role="tabpanel" class="tab-pane active" id="transfer-dog-tab">transfer-dog-tab</div>
+      <div role="tabpanel" class="tab-pane" id="transfer-sender-tab">transfer-sender-tab</div>
+      <div role="tabpanel" class="tab-pane" id="transfer-recipient-tab">transfer-recipient-tab</div>
+      <div role="tabpanel" class="tab-pane" id="transfer-volunteer-tab">transfer-volunteer-tab</div>
       <div role="tabpanel" class="tab-pane" id="transfer-note-tab">transfer-note-tab</div>
     </div>
   </div>
