Ajax in transfers done

--- a/app/views/events/_transfer.html.erb
+++ b/app/views/events/_transfer.html.erb
@@ -40,7 +40,28 @@
             </tbody>
           </table>
         </div>
-        <div role="tabpanel" class="tab-pane" id="transfer-sender-tab">transfer-sender-tab</div>
+        <div role="tabpanel" class="tab-pane" id="transfer-sender-tab">
+          <table class="table table-striped table-responsive table-hover">
+            <thead>
+              <tr>
+                <th>Added:</th>
+                <th>Full name:</th>
+                <th>Email:</th>
+                <th>Phone:</th>
+                <th>Address:</th>
+              </tr>
+            </thead>
+            <tbody>
+                <tr>
+                  <td id="sender-radio"></td>
+                  <td id='sender-fullname'></td>
+                  <td id='sender-email'></td>
+                  <td id='sender-phone'></td>
+                  <td id='sender-address'></td>
+                </tr>
+            </tbody>
+          </table>
+        </div>
         <div role="tabpanel" class="tab-pane" id="transfer-recipient-tab">
           <h3>Listing Clinets</h3>
           <table class="table table-striped table-responsive table-hover">
