--- a/app/views/events/transfer.js.erb
+++ b/app/views/events/transfer.js.erb
@@ -1,1 +1,19 @@
-debugger;
+let fullname;
+let email;
+let phone;
+let address;
+let radio;
+
+
+radio = $('#sender-radio').empty();
+fullname = $('#sender-fullname').empty();
+email = $('#sender-email').empty();
+phone = $('#sender-phone').empty();
+address = $('#sender-address').empty();
+
+radio.html("<input type='radio' checked disabled>");
+fullname.html(" <%= @client.fullname %> ");
+email.html(" <%= @client.email %> ");
+phone.html(" <%= @client.phone1 %> ");
+address.html(" <%= @client.location.full_street_address %> ");
+
