--- a/app/views/events/_transfer.html.erb
+++ b/app/views/events/_transfer.html.erb
@@ -13,7 +13,7 @@
     <div class="tab-content">
       <%= event.simple_fields_for :transfer do |tr| %> 
         <div role="tabpanel" class="tab-pane active" id="transfer-dog-tab">
-          <h3>Add Dogs</h3>
+          <h3>Add Dog</h3>
           <table class="table table-striped table-responsive table-hover">
             <thead>
               <tr>
@@ -29,7 +29,7 @@
               <%= hidden_field_tag "dog_id", nil %> 
               <% @dogs.each do |dog| %>
                 <tr>
-                  <td> <%= radio_button_tag "dog_id", dog.id, @event.training.dog_id == dog.id %> </td>
+                  <td> <%= radio_button_tag "dog_id", dog.id, @event.transfer.dog_id == dog.id %> </td>
                   <td> <%= dog.name %> </td>
                   <td> <%= dog.chip_id %> </td>
                   <td> <%= dog.age %> </td>
@@ -42,6 +42,7 @@
         </div>
         <div role="tabpanel" class="tab-pane" id="transfer-sender-tab">
           <table class="table table-striped table-responsive table-hover">
+            <h3>Sender</h3>
             <thead>
               <tr>
                 <th>Added:</th>
@@ -52,18 +53,18 @@
               </tr>
             </thead>
             <tbody>
-                <tr>
-                  <td id="sender-radio"></td>
-                  <td id='sender-fullname'></td>
-                  <td id='sender-email'></td>
-                  <td id='sender-phone'></td>
-                  <td id='sender-address'></td>
-                </tr>
+              <tr>
+                <td id="sender-radio"></td>
+                <td id='sender-fullname'></td>
+                <td id='sender-email'></td>
+                <td id='sender-phone'></td>
+                <td id='sender-address'></td>
+              </tr>
             </tbody>
           </table>
         </div>
         <div role="tabpanel" class="tab-pane" id="transfer-recipient-tab">
-          <h3>Listing Clinets</h3>
+          <h3>Listing Recipients</h3>
           <table class="table table-striped table-responsive table-hover">
             <thead>
               <tr>
@@ -76,10 +77,10 @@
               </tr>
             </thead>
             <tbody>
-              <%= hidden_field_tag "client_id", nil %> 
+              <%= hidden_field_tag "recipient_id", nil %> 
               <% @clients.each do |client| %>
                 <tr>
-                  <td> <%= radio_button_tag "client_id", client.id, @event.visit.client_id == client.id %> </td>
+                  <td> <%= radio_button_tag "recipient_id", client.id, @event.transfer.recipient_id == client.id %> </td>
                   <td><%= client.fullname %></td>
                   <td><%= client.email %></td>
                   <td><%= client.phone1 %></td>
@@ -104,10 +105,10 @@
               </tr>
             </thead>
             <tbody>
-              <%= hidden_field_tag "volunteer_id", nil %> 
+              <%= hidden_field_tag "conveyor_id", nil %> 
               <% @volunteers.each do |volunteer| %>
                 <tr>
-                  <td> <%= radio_button_tag "volunteer_id", volunteer.id, @event.visit.volunteer_id == volunteer.id %> </td>
+                  <td> <%= radio_button_tag "conveyor_id", volunteer.id, @event.transfer.volunteer_id == volunteer.id %> </td>
                   <td><%= volunteer.fullname %></td>
                   <td><%= volunteer.email %></td>
                   <td><%= volunteer.phone1 %></td>
