--- a/app/views/events/edit.js.erb
+++ b/app/views/events/edit.js.erb
@@ -1,6 +1,6 @@
 $('body').append('<%= j render("edit_form") %>');
 
-$('#custom-event, #training, #transfer, #visit').css("display", "initial");
+$('#custom-event, #training, #transfer, #visit').css("display", "inherit");
 
 $(document).on('change', '#training-other-checkbox', function() {
   if( $('#training-other-checkbox').not(':checked')) {
@@ -17,3 +17,23 @@ $('body').on('hidden.bs.modal', '.modal', function (e) {
   $(e.target).removeData('bs.modal');
   $('.modal').remove();
 });
+
+let fullname;
+let email;
+let phone;
+let address;
+let radio;
+
+
+radio = $('#sender-radio').empty();
+fullname = $('#sender-fullname').empty();
+email = $('#sender-email').empty();
+phone = $('#sender-phone').empty();
+address = $('#sender-address').empty();
+
+radio.html("<input type='radio' checked disabled>");
+fullname.html(" <%= @sender.fullname %> ");
+email.html(" <%= @sender.email %> ");
+phone.html(" <%= @sender.phone1 %> ");
+address.html(" <%= @sender.location.full_street_address %> ");
+
