--- a/app/views/events/_transfer.html.erb
+++ b/app/views/events/_transfer.html.erb
@@ -42,6 +42,7 @@
         </div>
         <div role="tabpanel" class="tab-pane" id="transfer-sender-tab">
           <table class="table table-striped table-responsive table-hover">
+            <%= hidden_field_tag "sender_id" %> 
             <h3>Sender</h3>
             <thead>
               <tr>
