Colorpicker implemented.Next type of event beside of title

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -25,6 +25,7 @@
 @import bootstrap-datetimepicker
 @import sessions
 @import clients 
+@import jquery.minicolors
 @import asside 
 @import dashboard
 @import events 
