--- a/app/assets/stylesheets/events.sass
+++ b/app/assets/stylesheets/events.sass
@@ -1,3 +1,4 @@
+
 #custom-event, #training, #transfer, #visit, .event_training_other
   display: none
 
@@ -6,3 +7,10 @@
 
 .modal-body
   padding: 30px
+
+.minicolors-input
+  padding-left: 0 !important
+  color: white
+  width: 4%
+
+    
