--- a/app/views/events/_edit_form.html.erb
+++ b/app/views/events/_edit_form.html.erb
@@ -21,7 +21,7 @@
                     <%= f.input :title, input_html: {class: "form-control" } %> 
                     <%= f.input :start, as: :string, input_html: {class: "datepicker form-control", id: "startTime"} %> 
                     <%= f.input :end, as: :string, input_html: {class: "datepicker form-control", id: "endTime"} %> 
-                    <%= f.input :color, as: :select, collection: [['Black','#000000'],['Green','#00FF00'],['Red','#FF0000']] %> 
+                    <%= f.input :color, as: :minicolors %> 
 
                     <%= hidden_field_tag :options, params[:options] %> 
                     <% case params[:options] 
@@ -56,3 +56,8 @@
     </div>
   </div>
 </div>
+<script>
+$('#event_color').minicolors({
+  theme: 'bootstrap'
+});
+</script>
