--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -3,7 +3,8 @@
   <%= f.input :title, input_html: {class: "form-control" } %> 
   <%= f.input :start, as: :string, input_html: {class: "datepicker form-control", id: "startTime"} %> 
   <%= f.input :end, as: :string, input_html: {class: "datepicker form-control", id: "endTime"} %> 
-  <%= f.input :color, as: :select, collection: [['Black','#000000'],['Green','#00FF00'],['Red','#FF0000']] %> 
+  <%# <%= f.input :color, as: :select, collection: [['','#f5168d'],['','#5ebd66'],['','#485ee3'],['','#f07d18'],['','#fa49c3']] %1> %> 
+  <%= f.input :color, as: :minicolors %> 
 
 
   <% unless params[:action] == 'edit' %>
@@ -23,3 +24,8 @@
     remote: true unless @event.new_record? %> 
 
 <% end %> 
+<script>
+$('#event_color').minicolors({
+  theme: 'bootstrap'
+});
+</script>
