--- a/app/assets/stylesheets/events.sass
+++ b/app/assets/stylesheets/events.sass
@@ -13,4 +13,9 @@
   color: white
   width: 4%
 
-    
+input.error, textarea.error
+  border: solid 1px red
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6) !important
+  z-index: 999
+label.error
+  color: red
